refactor(srm): 重构采购订单接口和数据传输对象
- 移除了未使用的部门映射代码
- 优化了订单转换逻辑，提高了代码可读性和性能
- 更新了 SrmPurchaseOrderDTO 和 SrmPurchaseOrderItemDTO，增加了新的字段以支持更多业务信息
- 删除了冗余的 getPurchaseOrderList 方法